Bug 209806 - MfcEmbed prefs not sticking on restart. The wrong contract ID was being used for a profile sharing component, causing pref writing to fail. r=jag,adamlock/sr=darin